contact and gallery pages updated

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,15 @@
             </span>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <span>Gallery</span>
+            <span>Contact</span>
+            <span>About</span>
+            <span>Home</span>
+        </div>
+
+    </footer>
 
 </body>
 </html>
