--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
+    <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
     <header>        
@@ -29,7 +30,15 @@
 
     <main>
 
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis magnam molestiae blanditiis quia mollitia aut praesentium optio consequatur, aliquam officia ea, accusantium cumque eum corrupti! Consequatur ullam saepe architecto deleniti! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum commodi quasi atque fugiat voluptatum dolore non? Facere, consequuntur minus consectetur odio suscipit necessitatibus, minima non unde repellat nemo eum aperiam.repudiandae.</p>
+            
+            <h3>Who am I?</h3>
 
+           <div>
+             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet expedita, ipsa dolor consequatur perferendis Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum rem necessitatibus nemo ad quas cumque ipsam aut repellendus vero nisi, tempore odit itaque cum amet distinctio asperiores quibusdam placeat unde! aperiam assumenda harum! Iste sint debitis non, ab, ducimus vel veritatis dolore Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea eaque doloribus officiis similique, consectetur voluptatum cupiditate illum optio cumque excepturi temporibus debitis atque provident! Excepturi ad voluptates aliquam dolores laboriosam. doloribus dignissimos consequatur repellenloremdus. </p>
+            </div>
+        </div>
         
     </main>
 
